# son

./: LICENSE  README.md  pyproject.toml
son/: __init__.py  interface.py  last.py  serialize.py  stream.py
tests/: test_son.py  test_stream.py
