[tool.poetry]
name = "son"
version = "0.4.1"
description = "Tools to read and write .son files"
authors = ["Florian Knoop", "Marcel F. Langer"]
license = "ISC"
readme = "README.md"
homepage = "https://flokno.github.io/son/"
repository = "https://github.com/flokno/son"
keywords = ["file format", "data"]

[tool.poetry.dependencies]
python = ">=3.5"
lz = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
